--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -24,7 +24,7 @@
     }
   
     &__items {
-      width: 60vw;
+      width: 80vw;
       margin: 2rem auto 0 auto;
       display: grid;
       grid-template-columns: 1fr;
@@ -38,7 +38,7 @@
       cursor: pointer;
   
       img {
-        width: 100%;
+        width: 300px;
       }
   
       &::after {
